fixed navbar logo size, banner image position and some text align

--- a/style.css
+++ b/style.css
@@ -319,6 +319,8 @@ footer {
     gap: 8px;
 }
 
+
+
 /* for mobile device */
 
 @media screen and (max-width:576px) {
@@ -344,10 +346,13 @@ footer {
         justify-content: space-between;
         padding: 16px 20px;
     }
+    .nav-logo>img {
+        width: 100px;
+    }
 
     /* banner */
     #banner {
-        padding: 40px 20px;
+        padding: 101px 20px 40px 20px;
         gap: 20px;
     }
     .bn-img {
@@ -428,6 +433,8 @@ footer {
     }
 }
 
+
+
 /* medium device */
 
 @media screen and (min-width:577px) and (max-width:992px) {
@@ -446,10 +453,13 @@ footer {
     #navbar>nav>ul {
         gap: 1rem;
     }
+    .nav-logo>img {
+        width: 150px;
+    }
 
     /* banner */
     #banner {
-        padding: 40px 40px;
+        padding: 101px 40px 40px 40px;
         gap: 30px;
     }
     .bn-img {
